Closed Bug 493238 Opened 16 years ago Closed 16 years ago

"Smart Scroll" software causes Firefox to crash in [@-[ChildView getScrollableView] ]

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.1 --- .4-fixed

People

(Reporter: jaas, Assigned: jaas)

Details

(Keywords: fixed1.9.0.15)

Attachments

(1 file)

There are a bunch of crash reports with "-[ChildView getScrollableView]", all of them have Smart Scroll on the stack, which is software that can be found here: http://marcmoini.com/sx_en.html Here is a sample crash report: http://crash-stats.mozilla.com/report/index/0ac4801a-57fb-4fc8-b5f5-b386d2090515
"Smart Scroll uses Unsanity's Application Enhancer system"
Also seeing a few of these in Camino 2.0b2 (Talkback :P TB54908881x, TB54849639x), so the unhappiness between them is also on 1.9.0.
I was just looking at http://crash-stats.mozilla.com/report/index/7bee9208-a468-4d59-a919-14dda2090604 from b3, and the crashing line is: [currView widget]->GetClientData(clientData); Even if the trigger is a runtime hack, -widget can return nsnull, so we should be null-checking the return before using it. Since it would be such a simple fix, it would be nice if we could get it for 1.9.0.x (I can make that patch, but not a trunk or 1.9.1 patch; I'm not sure if it would apply there or not).
Assignee: nobody → joshmoz
Attached patch fix v1.0Splinter Review
Attachment #383732 - Flags: review?(mstange)
Attachment #383732 - Flags: review?(mstange) → review+
pushed to mozilla-central http://hg.mozilla.org/mozilla-central/rev/4e7a019485f4 I'm going to assume that fixes this bug, re-open if it doesn't.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Can we get this on the branches after baking (and possibly some verification that "-[ChildView getScrollableView]" crashes have disappeared from m-c reports)?
Flags: wanted1.9.1.x?
Flags: wanted1.9.0.x?
(In reply to comment #6) > Can we get this on the branches after baking (and possibly some verification > that "-[ChildView getScrollableView]" crashes have disappeared from m-c > reports)? Josh: ping? Firefox 3.5.3 is still seeing this crash, as are Firefox 3.0.14 and Camino 2 builds. (I see no crashes in the past several weeks for 1.9.2- and m-c-based Firefoxen.)
Summary: "Smart Scroll" software causes Firefox to crash in -[ChildView getScrollableView] → "Smart Scroll" software causes Firefox to crash in [@-[ChildView getScrollableView] ]
Yeah, we should try to get this on 1.9.1 and 1.9.0.
Attachment #383732 - Flags: approval1.9.1.4?
Attachment #383732 - Flags: approval1.9.0.15?
Comment on attachment 383732 [details] [diff] [review] fix v1.0 Approved for 1.9.1.4 and 1.9.0.15, a=dveditz for release-drivers Code-freeze for these releases is tomorrow -- after that approval will be rescinded.
Attachment #383732 - Flags: approval1.9.1.4?
Attachment #383732 - Flags: approval1.9.1.4+
Attachment #383732 - Flags: approval1.9.0.15?
Attachment #383732 - Flags: approval1.9.0.15+
checked in to mozilla 1.9.0, revision 1.369
For 1.9.0 and prior branches please match the fixed keywords to the approval requests to keep our release queries straight, and for 1.9.1 and future branches please set the appropriate status field (instructions on the tinderbox pages)
Clearing those wanted requests since this landed; thanks Josh and Dan!
Flags: wanted1.9.1.x?
Flags: wanted1.9.0.x?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: