Add safety checks to ChildView's getScrollableView. b=493238 r=mstange